--- a/src/app/neon-list/neon-list.component.scss
+++ b/src/app/neon-list/neon-list.component.scss
@@ -812,7 +812,7 @@ form.checkout {
   min-width: 300px; /* Set a default minimum width */
   margin-left: -125px; /* Divide value of min-width by 2 */
   border-radius: 5px;
-  box-shadow: 0 6px 16px 0 rgba(8, 1, 120, 0.3);
+  box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.14);
   background-color: #000B31;  text-align: center; /* Centered text */
   padding: 10px; /* Padding */
   position: fixed; /* Sit on top of the screen */
