--- a/src/app/neon-form/neon-form.component.scss
+++ b/src/app/neon-form/neon-form.component.scss
@@ -661,6 +661,13 @@ box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.14);
 cursor: pointer;
 outline: none !important;}
 
+.form-btn span {
+  align-self: center;
+  text-align: center;
+  width: 100%;
+
+}
+
 .form-btn:hover {
     transform: scale(1.1);
 }
@@ -727,8 +734,17 @@ margin: 10px;
   margin-top: 5px;
 cursor: pointer;
 }
+
+.sizeName {
+  color: #000B31;
+  font-family: Mukta-Regular, sans-serif;
+  text-align: center;
+  font-size: 17px;
+}
 .size {
-  height: 100%;
+  height: 60%;
+  margin-top: 5%;
+  margin-bottom: 5%;
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
@@ -1043,7 +1059,7 @@ input[type="checkbox"].ios-switch:checked + div > div {
 
   .step-container {
     min-height: 450px;
-    margin-left: 33px;
+    margin-left: 20px;
   }
   .basic-input-text {
     height: 150px;
@@ -1068,6 +1084,10 @@ input[type="checkbox"].ios-switch:checked + div > div {
 .colorIcon {  
   width: 32%;
 
+}
+
+.form-btn span {
+  font-size: 17px;
 }
 
   }
