--- a/src/app/neon-form/neon-form.component.html
+++ b/src/app/neon-form/neon-form.component.html
@@ -393,25 +393,25 @@
             </thead>
             <tbody>
               <tr>
-                <td style="font-family: Mukta-Bold;" data-column="Vos dessins techniques">
+                <td style="font-family: Mukta-Bold;" data-column="">
                   {{mainChoice === 'text' ? 'Texte' :' Fichier img'}}</td>
                 <td style="font-family: Mukta-Regular;" data-column="Etat">{{textInput}}</td>
               </tr>
               <tr>
-                <td style="font-family: Mukta-Bold;" data-column="Vos dessins techniques">Typographie</td>
+                <td style="font-family: Mukta-Bold;" data-column="">Typographie</td>
                 <td style="font-family: Mukta-Regular;" data-column="Etat">{{styleSelected}}</td>
               </tr>
               <tr >
-                  <td  style="font-family: Mukta-Bold;" data-column="Vos dessins techniques">Couleurs</td>
+                  <td  style="font-family: Mukta-Bold;" data-column="">Couleurs</td>
                   <td style="font-family: Mukta-Regular;" data-column="Etat">{{selectedColor}}</td>
                 </tr>
               <tr>
-                <td style="font-family: Mukta-Bold;" data-column="Vos dessins techniques">Hauteur</td>
+                <td style="font-family: Mukta-Bold;" data-column="">Hauteur</td>
                 <td style="font-family: Mukta-Regular;" data-column="Etat">{{formatSizes[selectedFormatSize].width}} cm
                 </td>
               </tr>
               <tr >
-                  <td  style="font-family: Mukta-Bold;" data-column="Vos dessins techniques">Support</td>
+                  <td  style="font-family: Mukta-Bold;" data-column="">Support</td>
                   <td style="font-family: Mukta-Regular;" data-column="Etat">{{imageSupportSelected}}</td>
                 </tr>
               <tr>
