--- a/src/app/neon-list/neon-list.component.html
+++ b/src/app/neon-list/neon-list.component.html
@@ -12,7 +12,7 @@
       </div>
 
       <div class="ec-list-cont">
-        <th>Vos dessins techniques</th>
+          <h4 style="font-family: Mukta-Regular, sans-serif;">Vos dessins techniques</h4>
 
         <table>
 
@@ -26,7 +26,7 @@
           <tbody>
             <tr *ngFor="let command of neonList; let i = index" (click)="goToNeonDetail(command)">
               <!--              [className]="command.typo + ' dynamicNeonTitle ' + getColor(command.colors) "-->
-              <td class="pb3 pt3" data-column="Vos dessins techniques">{{command.text}}</td>
+              <td class="pb3 pt3" data-column="">{{command.text}}</td>
               <td data-column="Etat">{{command.state}}</td>
             </tr>
 
@@ -161,25 +161,25 @@
         </thead>
         <tbody>
           <tr>
-            <td style="font-family: Mukta-Bold;" data-column="Vos dessins techniques">Texte</td>
+            <td style="font-family: Mukta-Bold;" data-column="">Texte</td>
             <td style="font-family: Mukta-Regular;" data-column="Etat">{{neonSelected.text}}</td>
 
             <!-- <td  [className]="neonSelected.typo + ' dynamicNeonTitle ' + colorsList[neonSelected.colors] " style="font-family: Mukta-Regular;" data-column="Etat">{{neonSelected.text}}</td> -->
           </tr>
           <tr>
-            <td style="font-family: Mukta-Bold;" data-column="Vos dessins techniques">Typographie</td>
+            <td style="font-family: Mukta-Bold;" data-column="">Typographie</td>
             <td style="font-family: Mukta-Regular;" data-column="Etat">{{neonSelected.typo}}</td>
           </tr>
           <tr>
-            <td style="font-family: Mukta-Bold;" data-column="Vos dessins techniques">Couleurs</td>
+            <td style="font-family: Mukta-Bold;" data-column="">Couleurs</td>
             <td style="font-family: Mukta-Regular;" data-column="Etat">{{neonSelected.colors}}</td>
           </tr>
           <tr>
-            <td style="font-family: Mukta-Bold;" data-column="Vos dessins techniques">Hauteur</td>
+            <td style="font-family: Mukta-Bold;" data-column="">Hauteur</td>
             <td style="font-family: Mukta-Regular;" data-column="Etat">{{neonSelected.height}}cm</td>
           </tr>
           <tr>
-            <td style="font-family: Mukta-Bold;" data-column="Vos dessins techniques">Etat</td>
+            <td style="font-family: Mukta-Bold;" data-column="">Etat</td>
             <td style="font-family: Mukta-Regular;" data-column="Etat">{{neonSelected.state}}</td>
           </tr>
 
