--- a/src/app/neon-list/neon-list.component.html
+++ b/src/app/neon-list/neon-list.component.html
@@ -562,10 +562,10 @@
   <div class=col-2></div>
     <div class = 'col-8'>
         <div *ngIf="neonSelected.state !== 'created'" [style.backgroundImage]="'url('+ neonSelected.filePath +')'"
-        class="neon-canvas"></div>
+        class="neon-canvas2"></div>
         <button  (click)="resetView();"
-        style="" class="next-btn">Revenir à mon espace</button>
-        <h2>Merci pour votre commande ! Votre néon arrivera à l'adresse indiquée dans un délai de 15 à 20 jours. Notre équipe est joignable sur contact@dessinemoiunneon.fr</h2>
+        class="next-btn">Revenir à mon espace</button>
+        <h2 class='remerciements'>Merci pour votre commande ! Votre néon arrivera à l'adresse indiquée dans un délai de 15 à 20 jours. Notre équipe est joignable sur contact@dessinemoiunneon.fr</h2>
     </div>
     <div class=col-2></div>
 
