--- a/src/app/neon-form/neon-form.component.html
+++ b/src/app/neon-form/neon-form.component.html
@@ -411,7 +411,8 @@
                 </td>
               </tr>
               <tr >
-                  <td  style="font-family: Mukta-Bold;" data-column="">Support</td>
+                  <td  style="font-family: Mukta-Bold;" data-column="
+                  ">Support</td>
                   <td style="font-family: Mukta-Regular;" data-column="Etat">{{imageSupportSelected}}</td>
                 </tr>
               <tr>
