--- a/src/app/neon-form/neon-form.component.html
+++ b/src/app/neon-form/neon-form.component.html
@@ -229,11 +229,11 @@
 
 
 
-
+          
         </div>
         <div class="neon-wizard-btn-container mt5 row">
           <button class="prev-btn  col-md-3 col-sm-12" type="button" awPreviousStep>Précedent</button>
-          <button class="next-btn  col-md-3 col-sm-12" type="button" awNextStep>Suivant</button>
+          <button class="next-btn  col-md-3 col-sm-12" type="button" (click)="onCompleteStep(4, imageSupportSelected, null)"  awNextStep>Suivant</button>
 
         </div>
 
