--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,7 +2,7 @@
     <div class="col-lg-4 col-md-2 col-sm-2 col-xs-2"></div>
 
     <div class="step-container-inner col-lg-4 col-md-8 col-sm-8 col-xs-10">
-            <h1 class='login-header row'>{{isSignIn ? 'Connectez-vous à votre espace' : 'Créez votre compte      Psssst.......... c est gratuit !!'}}</h1>
+            <h1 class='login-header row'>{{isSignIn ? 'Connectez-vous à votre espace' : 'Créez votre compte'}}</h1>
             <div *ngIf="isSignIn" class="login-step-container">
 
                     <h2 class="login-title">Connectez vous à votre compte</h2>
@@ -16,7 +16,7 @@
                      <div class='user-info-row-cont login-row'>
                             <span class="user-info-row-title">Mot de passe</span>
                         <form>
-                          <input type='password' (change)="onChangeUserInfo('password', $event.target.value)" [value]="password"  class="basic-input "/>
+                          <input type='hidden' (change)="onChangeUserInfo('password', $event.target.value)" [value]=""  class="basic-input "/>
                         </form>
                               <a style="text-align: center; text-decoration: underline; margin-top: 3%;" href="#">J'ai oublié mon mot de passe</a>
 
@@ -48,7 +48,7 @@
                      <div class='user-info-row-cont login-row'>
                             <span class="user-info-row-title">Mot de passe</span>
                        <form>
-                         <input type='password' (change)="onChangeUserInfoSignUp('password', $event.target.value)" [value]="password"  class="basic-input "/>
+                         <input type='hidden' (change)="onChangeUserInfoSignUp('password', $event.target.value)" [value]=""  class="basic-input "/>
                        </form>
                               <a style="text-align: center; text-decoration: underline; margin-top: 3%;" href="#">J'ai oublié mon mot de passe</a>
                               <div *ngIf="loginFailed" class="errorMessage">{{signUpError}}</div>
