--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,6 +1,6 @@
 .login-container {
     font-family: Mukta-Regular, sans-serif;
-background-color: #000b31;
+background-color: transparent !important;
 min-height: 100vh;
  }
 
@@ -84,8 +84,9 @@ min-height: 100vh;
 .login-header {
     font-family: Nunito-Black, sans-serif;
     color: white;
+    align-self: center;
     text-align: center;
-    margin-bottom: 15%;
+    margin-bottom: 10%;
     font-size: 2.5em;
 }
 
