--- a/src/app/neon-form/neon-form.component.scss
+++ b/src/app/neon-form/neon-form.component.scss
@@ -528,10 +528,10 @@ small {
   padding-bottom: 10px;
 }
 
-
+  
 .form-container {
     font-family: 'Nunito', sans-serif;
-background-color: #000b31;
+background-color: transparent;
 min-height: 100vh;
 padding-top: 7%;
 display: flex;
