--- a/src/app/admin/admin.component.scss
+++ b/src/app/admin/admin.component.scss
@@ -141,6 +141,8 @@ h2 {
 .ec-bigbox-detail {
     padding-left: 7%;
     padding-right: 7%;
+    max-height: 600px;
+
   }
   .ec-top-row-detail {
     height: 45%;
