--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -16,9 +16,9 @@
                      <div class='user-info-row-cont login-row'>
                             <span class="user-info-row-title">Mot de passe</span>
                         <form>
-                          <input type='hidden' (change)="onChangeUserInfo('password', $event.target.value)" [value]=""  class="basic-input "/>
+                          <input type='password' (change)="onChangeUserInfo('password', $event.target.value)" [value]=""  class="basic-input "/>
                         </form>
-                              <a style="text-align: center; text-decoration: underline; margin-top: 3%;" href="#">J'ai oublié mon mot de passe</a>
+                              <!-- <a style="text-align: center; text-decoration: underline; margin-top: 3%;" href="#">J'ai oublié mon mot de passe</a> -->
 
                      </div>
                         <div *ngIf="loginFailed" class="errorMessage">Oops! Le mot de passe est incorrect...</div>
@@ -30,7 +30,7 @@
 
             <div *ngIf="!isSignIn" class="login-step-container">
 
-                    <div class='user-info-row-cont login-row'>
+                     <div class='user-info-row-cont login-row'>
                             <span class="user-info-row-title">Prénom</span>
                               <input type='text' (change)="onChangeUserInfoSignUp('nickname', $event.target.value)" [value]="nickname || ''"  class="basic-input "/>
                 
@@ -48,9 +48,9 @@
                      <div class='user-info-row-cont login-row'>
                             <span class="user-info-row-title">Mot de passe</span>
                        <form>
-                         <input type='hidden' (change)="onChangeUserInfoSignUp('password', $event.target.value)" [value]=""  class="basic-input "/>
+                         <input type='password' (change)="onChangeUserInfoSignUp('password', $event.target.value)" [value]=""  class="basic-input "/>
                        </form>
-                              <a style="text-align: center; text-decoration: underline; margin-top: 3%;" href="#">J'ai oublié mon mot de passe</a>
+                              <!-- <a style="text-align: center; text-decoration: underline; margin-top: 3%;" href="#">J'ai oublié mon mot de passe</a> -->
                               <div *ngIf="loginFailed" class="errorMessage">{{signUpError}}</div>
                      </div>
                             <button class="next-btn signup-btn " (click)="onSignUp()" type="button" >C'est parti</button> 
