--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,7 +1,7 @@
 .login-container {
     font-family: Mukta-Regular, sans-serif;
 background-color: transparent !important;
-min-height: 100vh;
+// min-height: 100vh;
  }
 
  .login-title {
