--- a/src/app/neon-list/neon-list.component.html
+++ b/src/app/neon-list/neon-list.component.html
@@ -9,6 +9,7 @@
       <div class='ec-list-title'>
         <h2 class="ec-title">Tous vos néons</h2>
         <button class="prev-btn" (click)="goToForm();">Créer un nouveau néon !</button>
+        <button style='margin-left: 15px' class="next-btn" (click)="logout()">Se déconnecter</button>
       </div>
 
       <div class="ec-list-cont">
@@ -50,7 +51,7 @@
 
           </span>
           <span class="ec-card-descr">
-            Les paiements sur notre site sont sécurisés. Nous acceptons tous les paiement dont Visa, Master Card, Amex,
+            Les paiements sur notre site sont sécurisés via le module Stripe. Nous acceptons tous les paiements dont Visa, Master Card, Amex,
             Paypal et Maestro.
           </span>
 
@@ -83,9 +84,8 @@
             Garantie
           </span>
           <span class="ec-card-descr">
-            Tous nos néons possèdent une garantie d'un an à compter de la data d'achat. Si vous devez retourner un
-            article défectueux, veuillez
-            nous contacter avec votre numéro de commande et les détails concernant le produit que vous souhaitez
+            Tous nos néons possèdent une garantie d'un an à compter de la date d'achat. Si vous devez retourner un
+            article défectueux, veuillez nous contacter avec votre numéro de commande et les détails concernant le produit que vous souhaitez
             retourner !
           </span>
 
@@ -120,7 +120,7 @@
 
         <div class="neon-bar-item-cont">
           <div [style.backgroundImage]="'url('+ '../.././assets/aqua.png' +')'" class="neon-bar-item"></div>
-          <span>Réistant à l'eau</span>
+          <span>Résistant à l'eau</span>
         </div>
 
         <div class="neon-bar-item-cont">
@@ -235,7 +235,7 @@
             Paiement sécurisé
           </span>
           <span class="ec-card-descr">
-            Les paiements sur notre site sont sécurisés. Nous acceptons tous les paiement dont Visa, Master Card, Amex,
+            Les paiements sur notre site sont sécurisés  via le module Stripe. Nous acceptons tous les paiements dont Visa, Master Card, Amex,
             Paypal et Maestro.
           </span>
 
@@ -287,7 +287,7 @@
 
           </span>
           <span class="ec-card-descr">
-            Nous livrons dans un délai de 15 jours selon la production et la destination. En cas de demande urgente
+            Nous livrons dans un délai de 15 à 20 jours selon la production et la destination. En cas de demande urgente
             merci de nous contacter directement
             afin de procéder à une "Livraison express"
           </span>
@@ -426,7 +426,7 @@
       <h2>Mode de livraison</h2>
       <div class="tiny-card">
         <!-- <input style="margin-right: 10px; align-self: center;" type="checkbox" /> -->
-        <div class="livraisonDom">Livraison à domicile: 15 jours ouvrés</div>
+        <div class="livraisonDom">Livraison à domicile: 15 à 20 jours ouvrés</div>
       </div>
 
 
@@ -514,7 +514,7 @@
           </span>
 
           <div class="recapList row">
-            <div style='margin-left: 20px !important;' class="row">
+            <div style='min-height: 50px;margin-left: 20px !important;' class="row">
               <div class="col-5">Néon LED "{{neonSelected?.text}}"</div>
               <div class="col-2"></div>
               <div class="col-5">{{neonSelected?.price}} €</div>
